# docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "https",
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "API para consulta de resultados de loterias da Caixa Econômica Federal",
@@ -15,7 +19,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8090",
+    "host": "api-loterias.moleniuk.com",
     "basePath": "/api",
     "paths": {
         "/": {
